<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ru.lifegame</groupId>
        <artifactId>life-of-t-parent</artifactId>
        <version>0.1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>asset-generator</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Life of T — Asset Generator</name>
    <description>Universal XML-driven pixel-art asset generator</description>

    <properties>
        <!--
            Default path to asset specs for standalone disk-mode execution.
            Override via -Dspecs.dir=/absolute/path at the command line.
            When specs.dir is NOT passed, AssetGeneratorRunner switches to
            ClasspathSpecsSource automatically (classpath mode).
        -->
        <specs.dir>${project.basedir}/../game-content/life-of-t/src/main/resources/asset-specs</specs.dir>
        <output.dir>${project.build.directory}/generated-assets</output.dir>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <release>21</release>
                    <compilerArgs/>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>

            <!--
              Run asset generation AFTER compilation (process-classes).
              Input:  ${specs.dir} (disk mode — default points to game-content module).
              Output: ${output.dir} = target/generated-assets/
              To run in classpath mode, omit the systemProperty below and
              ensure game-content jar is on the classpath.
            -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>generate-assets</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>ru.lifegame.assets.AssetGeneratorRunner</mainClass>
                            <systemProperties>
                                <systemProperty>
                                    <key>specs.dir</key>
                                    <value>${specs.dir}</value>
                                </systemProperty>
                                <systemProperty>
                                    <key>output.dir</key>
                                    <value>${output.dir}</value>
                                </systemProperty>
                            </systemProperties>
                            <arguments>
                                <argument>${output.dir}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
